--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
 
     <h2>Generated Output:</h2>
     <pre id="output"></pre>
+  <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+  <script>
+    kofiWidgetOverlay.draw('kloknibor', {
+      'type': 'floating-chat',
+      'floating-chat.donateButton.text': 'Support me',
+      'floating-chat.donateButton.background-color': '#f45d22',
+      'floating-chat.donateButton.text-color': '#fff'
+    });
+  </script>
 
     <script>
         function parserValidate(value, min = 1, max = 65535) {
